--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -51,7 +51,7 @@ textarea {
   min-height: 4vw;
 }
 
-button {
+.button-form {
   width: 30%;
   padding: 12px;
   font-size: 16px;
@@ -63,7 +63,7 @@ button {
   transition: background-color 0.3s ease;
 }
 
-button:hover {
+.button-form:hover {
   background-color: goldenrod;
 }
 
