--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -41,11 +41,12 @@
 
 
 .button-contact {
-  margin: 1.6vw;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #27aae1;
+  width: 10vw;
+  height: 3vw;
+  margin: 2vw;
+  font-size: 1em;
   color: white;
+  background-color: #27aae1;
   border: none;
   border-radius: 4px;
   cursor: pointer;
