--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -7,14 +7,16 @@
 }
 
 form {
-  background-color: #4c4c4c;
-  padding: 20px;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px;
+  padding: 2vw;
   border-radius: 8px;
   width: 100%;
   max-width: 400px;
   display: inline-block;
-  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.32);
-}
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);}
 
 
 label {
