--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,14 +1,21 @@
 .about-section {
-  padding: 2vw 2vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .about-content {
-  max-width: 800px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 80%;
+  width: 100%;
+}
+
+.about-description {
+  flex: 1;
+  text-align: left;
+  padding-right: 2vw;
 }
 
 .about-title {
@@ -18,9 +25,16 @@
   margin-bottom: 1.5vw;
 }
 
-.about-description {
+.about-description p {
   font-size: 1.5vw;
   color: #dddddd;
   line-height: 1.8;
-  margin-bottom: 2vw;
+}
+
+.about-image {
+  width: 20vw;
+  height: 20vw;
+  border-radius: 50%; /* Circular shape */
+  object-fit: cover; /* Ensures image fills the circle */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
