--- a/src/App.css
+++ b/src/App.css
@@ -10,17 +10,19 @@ body {
   background: linear-gradient(to left, #444446 0%, #1e1e1e 50%, #272727 100%);
 }
 
-.border-top {
+.bd {
   position: fixed;
   background-color: #27aae1;
+  z-index: 1000;
+}
+
+.border-top {
   width: 100%;
   height: 0.8vw;
   top: 0;
 }
 
 .border-right {
-  position: fixed;
-  background-color: #27aae1;
   width: 0.8vw;
   height: 100%;
   right: 0;
@@ -28,16 +30,12 @@ body {
 }
 
 .border-bottom {
-  position: fixed;
-  background-color: #27aae1;
   width: 100%;
   height: 0.8vw;
   bottom: 0;
 }
 
 .border-left {
-  position: fixed;
-  background-color: #27aae1;
   width: 0.8vw;
   height: 100%;
   left: 0;
