--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,53 +1,143 @@
-.nav-container {
-  margin-top: 1.6vw;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 10px;
-  text-align: center;
-}
-
-.navbar {
-  margin-top: 1.6vw;
-  padding: 1rem;
+.header {
+  margin-top: 1.8vw;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1;
+  padding: 20px;
 }
 
-.logo {
-  z-index: 100;
-  margin: .8vw;
-  width: 10vw;
-  height: auto;
-}
-
-.navbar ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 5rem;
-}
-
-.navbar li a{
-  text-transform: uppercase;
-  font-size: 1.6rem;
-  color: #27aae1;
+.hamburger {
+  display: none;
   cursor: pointer;
-  transition: color 0.3s ease;
-  padding: 0 2vw;
-  text-decoration: none;
-  list-style-type: none;
 }
 
-.navbar li a:hover {
+.hamburger div {
+  width: 30px;
+  height: 3px;
+  margin: 5px 0;
+  background-color: #27aae1;
+  border-radius: 3px;
+}
+
+.drawer {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to left, #585858 0%, #313131 100%);
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  display: flex;
+  justify-content: center;}
+
+.drawer.open {
+  transform: translateX(0);
+  display: block;
+}
+
+.drawer ul {
+  list-style: none;
+  padding: 20px;
+}
+
+.drawer li {
+  margin-bottom: 10px;
+}
+
+.drawer a {
+  text-decoration: none;
   color: goldenrod;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: end;
+    padding: 20px;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .drawer {
+    display: block;
+    position: fixed;
+  }
+
+  .drawer ul {
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 769px) {
+  .header {
+    justify-content: end;
+    padding: 5px;
+    margin-top: 5px;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .drawer {
+    display: flex;
+    position: static;
+    width: auto;
+    height: auto;
+    background: none;
+    box-shadow: none;
+    transform: none;
+  }
+
+  .drawer ul {
+    display: flex;
+    gap: 6vw;
+    padding: 0;
+  }
+
+  .drawer li {
+    margin-bottom: 0;
+  }
+
+  .drawer a {
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #27aae1;
+    cursor: pointer;
+    transition: color 0.3s ease;
+    padding: 0 2vw;
+    text-decoration: none;
+    list-style-type: none;
+  }
+
+  .drawer a:hover {
+    color: goldenrod;
+  }
+
+  @media (min-width: 1200px) {
+    .header {
+      justify-content: center;
+      margin-top: 5px;
+    }
+
+    .drawer a {
+      text-transform: uppercase;
+      font-size: 24px;
+      color: #27aae1;
+      cursor: pointer;
+      transition: color 0.3s ease;
+      padding: 0 2vw;
+      text-decoration: none;
+      list-style-type: none;
+    }
+  }
 }
 
 
