--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,14 +12,8 @@
 
 .home-title {
   text-transform: uppercase;
-  font-size: 4rem;
-  cursor: pointer;
-  transition: color 0.3s ease;
+  font-size: 64px;
   padding: 0 2vw;
-  color: rgb(255, 255, 255);
-}
-
-.first {
   color: rgb(255, 255, 255);
 }
 
@@ -32,7 +26,7 @@
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-size: 1.4rem;
+  font-size: 26px;
   transition: color 0.3s ease;
   letter-spacing: .3vw;
   padding: 0 2vw;
@@ -41,8 +35,8 @@
 
 
 .button-contact {
-  width: 10vw;
-  height: 3vw;
+  width: 180px;
+  height: 50px;
   margin: 2vw;
   font-size: 1em;
   color: white;
@@ -56,4 +50,124 @@
 .button-contact:hover {
   background-color: goldenrod;
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.32);
+}
+
+
+
+@media (max-width: 1439px) and (min-width: 1024px) {
+  .button-contact {
+    width: 150px;
+    height: 40px;
+    margin: 2vw;
+    font-size: 14px;
+  }
+}
+
+
+
+@media (max-width: 1023px) and (min-width: 768px) {
+  .home-title {
+    font-size: 48px;
+    padding: 0 2vw;
+  }
+
+  .subtitle {
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: .3vw;
+    padding: 0 2vw;
+  }
+
+  .button-contact {
+    width: 140px;
+    height: 40px;
+    margin: 2vw;
+    font-size: 14px;
+  }
+
+}
+
+@media (max-width: 767px) and (min-width: 576px) {
+  .home-title {
+    font-size: 32px;
+    padding: 0 2vw;
+  }
+
+  .subtitle {
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: .3vw;
+    padding: 0 2vw;
+  }
+
+  .button-contact {
+    width: 120px;
+    height: 40px;
+    margin: 2vw;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 575px) {
+  .home-container {
+    flex-direction: column;
+    justify-content: center;
+  }
+    .home-title {
+      font-size: 26px;
+      padding: 0 2vw;
+    }
+
+    .subtitle {
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+      font-size: 12px;
+      letter-spacing: .3vw;
+      padding: 0 2vw;
+    }
+
+    .subtitle {
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+      font-size: 16px;
+      letter-spacing: .3vw;
+      padding: 0 2vw;
+    }
+
+    .button-contact {
+      width: 100px;
+      height: 30px;
+      margin: 2vw;
+      font-size: 10px;
+    }
+}
+
+@media (max-width: 300px) {
+  .home-title {
+    font-size: 20px;
+    padding: 0 2vw;
+  }
+
+  .subtitle {
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: .3vw;
+    padding: 0 2vw;
+  }
+
+  .button-contact {
+    width: 100px;
+    height: 25px;
+    margin: 2vw;
+    font-size: 10px;
+  }
+
 }
