--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -9,3 +9,44 @@
   height: auto;
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.32);
 }
+
+@media (min-width: 1440px) {
+
+}
+
+/* For desktops and laptops (1024px to 1439px) */
+@media (max-width: 1439px) and (min-width: 1024px) {
+
+}
+
+/* For tablets (768px to 1023px) */
+@media (max-width: 1023px) and (min-width: 768px) {
+
+}
+
+@media (max-width: 767px) and (min-width: 576px) {
+  .hero-container {
+    max-width: 100%;
+    margin-top: 1vw;
+    margin-left: 5vw;
+  }
+
+  .hero {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .hero-container {
+    max-width: 100%;
+    margin-top: 1vw;
+    margin-left: 5vw;
+  }
+
+  .hero {
+    width: 200px;
+    height: auto;
+  }
+  
+}
