--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -80,3 +80,17 @@ button:disabled {
   text-align: center;
   margin-top: 20px;
 }
+
+@media (max-width: 575px) {
+  .button-form {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #27aae1;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+}
