--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -29,6 +29,25 @@ label {
 }
 
 
+input[type="name"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+input[type="name"]:focus,
+textarea:focus {
+  border-color: goldenrod;
+  box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
+  outline: none;
+}
+
 input[type="email"],
 textarea {
   width: 100%;
@@ -79,18 +98,4 @@ button:disabled {
   color: goldenrod;
   text-align: center;
   margin-top: 20px;
-}
-
-@media (max-width: 575px) {
-  .button-form {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #27aae1;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
 }
