--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   max-width: 80%;
   width: 100%;
+  margin-top: 2vh;
 }
 
 .about-title {
@@ -32,38 +33,101 @@
 }
 
 .about-image {
-  width: 20vw;
-  height: 20vw;
+  width: 400px;
+  height: 400px;
   border-radius: 50%; /* Circular shape */
   object-fit: cover; /* Ensures image fills the circle */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-/* For large desktops (1440px and up) */
-@media (min-width: 1440px) {
-
-}
-
 /* For desktops and laptops (1024px to 1439px) */
 @media (max-width: 1439px) and (min-width: 1024px) {
-
+  .about-image {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 /* For tablets (768px to 1023px) */
 @media (max-width: 1023px) and (min-width: 768px) {
+  .about-image {
+    width: 250px;
+    height: 250px;
+  }
 
+  .about-container {
+    margin-top: 2vh;
+
+  }
+
+  .about-content {
+    flex-direction: column;
+    width: 90%;
+    margin-top: 2vh;
+  }
 }
 
-/* For large phones (576px to 767px) */
 @media (max-width: 767px) and (min-width: 576px) {
-
-}
-
-/* For small phones (up to 575px) */
-@media (max-width: 575px) {
   .about-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
+  }
+
+  .about-image {
+    width: 250px;
+    height: 250px;
+  }
+
+  .about-description p {
+    font-size: 18px;
+  }
+
+  .about-content {
+    flex-direction: column;
+    width: 90%;
+    margin-top: 2vh;
+  }
+}
+
+@media (max-width: 575px) {
+  .about-content {
+    flex-direction: column;
+    width: 80%;
+    margin-top: 2vh;
+  }
+
+  .about-description p {
+    font-size: 16px;
+  }
+
+  .about-image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .about-title {
+    font-size: 42px;
+  }
+}
+
+@media (max-width: 300px) {
+  .about-content {
+    flex-direction: column;
+    width: 90%;
+    margin-top: 2vh;
+  }
+
+  .about-description p {
+    font-size: 12px;
+  }
+
+  .about-image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .about-title {
+    font-size: 36px;
   }
 }
