--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,12 +12,12 @@
 
 .home-title {
   text-transform: uppercase;
-  font-size: 64px;
+  font-size: 2.4vw;
   padding: 0 2vw;
   color: rgb(255, 255, 255);
 }
 
-.second {
+.last {
   color: goldenrod;
 }
 
@@ -32,7 +32,6 @@
   padding: 0 2vw;
   color: goldenrod;
 }
-
 
 .button-contact {
   width: 180px;
@@ -55,6 +54,7 @@
 
 
 @media (max-width: 1439px) and (min-width: 1024px) {
+
   .button-contact {
     width: 150px;
     height: 40px;
@@ -66,10 +66,7 @@
 
 
 @media (max-width: 1023px) and (min-width: 768px) {
-  .home-title {
-    font-size: 48px;
-    padding: 0 2vw;
-  }
+
 
   .subtitle {
     justify-content: center;
@@ -90,11 +87,6 @@
 }
 
 @media (max-width: 767px) and (min-width: 576px) {
-  .home-title {
-    font-size: 32px;
-    padding: 0 2vw;
-  }
-
   .subtitle {
     justify-content: center;
     align-items: center;
@@ -113,44 +105,36 @@
 }
 
 @media (max-width: 575px) {
+  .home-title {
+    font-size: 4vw;
+    padding: 0 2vw;
+  }
+  
   .home-container {
     flex-direction: column;
     justify-content: center;
   }
-    .home-title {
-      font-size: 26px;
-      padding: 0 2vw;
-    }
 
-    .subtitle {
-      justify-content: center;
-      align-items: center;
-      text-transform: uppercase;
-      font-size: 12px;
-      letter-spacing: .3vw;
-      padding: 0 2vw;
-    }
+  .subtitle {
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 12px;
+    letter-spacing: .3vw;
+    padding: 0 2vw;
+  }
 
-    .subtitle {
-      justify-content: center;
-      align-items: center;
-      text-transform: uppercase;
-      font-size: 16px;
-      letter-spacing: .3vw;
-      padding: 0 2vw;
-    }
-
-    .button-contact {
-      width: 100px;
-      height: 30px;
-      margin: 2vw;
-      font-size: 10px;
-    }
+  .button-contact {
+    width: 100px;
+    height: 30px;
+    margin: 2vw;
+    font-size: 10px;
+  }
 }
 
 @media (max-width: 300px) {
   .home-title {
-    font-size: 20px;
+    font-size: 4vw;
     padding: 0 2vw;
   }
 
